<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application settings -->
    <string name="app_name">Live Sports Tracker</string>
    <string name="facebook_app_id">772751879478055</string>


    <!-- Menu actions names -->
    <string name="action_settings">Settings</string>
    <string name="action_importGpx">Import GPX</string>
    <string name="action_plans">Plans</string>
    <string name="action_logout">Logout</string>
    <string name="action_selectUser">Select user</string>
    <string name="action_refresh_login">Refresh login data</string>

    <string name="alert_cant_read_data">Cannot read data</string>

    <!-- Activities titles -->
    <string name="title_activity_tracking">Tracking</string>
    <string name="title_activity_file_chooser">File chooser</string>
    <string name="title_activity_list_routes">List routes</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_plans">Plans</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_authenticator">Authentication</string>
    <string name="title_activity_login_facebook">Facebook login</string>
    <string name="title_activity_selection">Live Sports Tracker</string>
    <string name="title_activity_live_tracker">Live tracker</string>
    <string name="title_activity_list_users">List users</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_registration">Registration</string>

    <!-- Buttons translations -->
    <string name="btn_pause">Pause</string>
    <string name="btn_done">Done</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_share">Share</string>
    <string name="btn_login">Login</string>
    <string name="btn_discard">Discard</string>
    <string name="btn_friends">Friends</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_register">Register</string>

    <!-- Other translations -->
    <string name="route_saved">Route saved</string>
    <string name="route_discared">Route discarded</string>
    <string name="route_save_failed">There was error when saving. Check that you have enough space on SD card.</string>
    <string name="route_distance">Distance</string>
    <string name="route_avg_speed">Average speed</string>
    <string name="route_name">Route name</string>
    <string name="not_support_gps">GPS not supported!</string>
    <string name="not_support_network">Wireless provider not supported!</string>
    <string name="gps_disabled_settings_open">GPS disabled. Open settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="external_storage_cant_write">Cannot write on SD card</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_browse_gpx">Browse GPX file</string>
    <string name="no_gpx_file_chosen">No file choosen. For continue choose file with GPX extension.</string>
    <string name="gpx_file_check_error">"File is not GPY. For continue choose file with GPX extension.</string>
    <string name="file_uploaded">File uploaded</string>
    <string name="current_directory">Current directory</string>
    <string name="files">files</string>
    <string name="parent_directory">Parent directory</string>
    <string name="export_in_current_directory">Export in current directory</string>
    <string name="error_settings_params">Error setting parameters</string>
    <string name="my_plans">My plans</string>
    <string name="list_plans">List plans</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="new_user">New user?</string>
    <string name="user_name">User name</string>
    <string name="create_account">Create account</string>
    <string name="already_member">Already member?</string>
    <string name="email_taken">Email already taken</string>
    <string name="username_taken">Username already taken</string>
    <string name="enable_live_tracking">Live tracking</string>
    <string name="route_name_empty">Route name could not be empty</string>
    <string name="login_button_content_description">Login with Amazon</string>
    <string name="default_login_message">Welcome! If this is your first login, you will have to enter login data.</string>
    <string name="logout">Logout</string>
    <string name="return_to_app">Return to app</string>
    <string name="get_started">For start login with Facebook</string>
    <string name="last_acivity">Last activity</string>
    <string name="live_tracking">Live tracking</string>
    <string name="time">Time</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="user_not_online">User not online</string>
    <string name="invite_friends">Invite friends</string>
    <string name="live">LIVE TRACKING</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="data_required">Enter text in all fields</string>
    <string name="password6">Password should be at least 6 characters long</string>
    <string name="registration_success">Success</string>
    <string name="login_with_facebook">For using this functionality you have to login with Facebook</string>
    <string name="empty_data_warning">Insert all necessary data</string>
    <string name="invalid_registration">Invalid registration</string>

    <!-- ADs -->
    <string name="banner_ad_unit_id">ca-app-pub-6313274691210140/3059997711</string>


    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

</resources>
