<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="luka.cyclingmaster.SignUpActivity">

    <EditText
        android:id="@+id/editSignUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editSignUpAccountName"
        android:layout_below="@id/editSignUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/editSignUpAccountPassword"
        android:layout_below="@id/editSignUpAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/btnSignUpSubmit"
        android:layout_below="@id/editSignUpAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"/>

    <TextView android:id="@+id/txtAlreadyMember"
        android:layout_below="@id/btnSignUpSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/already_member"/>

</RelativeLayout>
