<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="luka.cyclingmaster.AuthenticatorActivity">

    <EditText
        android:id="@+id/editAccountName"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/editAccountPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/editAccountName"
        android:layout_marginBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/editAccountPassword"
        android:layout_marginBottom="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/txtNewUser"
        android:text="@string/new_user"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>

</RelativeLayout>
